--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -21,4 +21,11 @@
     padding: 0;
     margin: 0;
     height: auto;
+
+    .line {
+        flex: 1;
+        height: 2px;
+        background-color: white;
+        margin: 0 1rem;
+    }
 }
