--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,1 +1,28 @@
-<p>products-list works!</p>
+<div class="container">
+    <div class="title">
+        <h3>Products List</h3>
+    </div>
+
+    <div class="button-search">
+        <button type="button" class="btn btn-success">Add Product</button>
+        <form class="d-flex">
+            <input class="form-control me-sm-2" type="search" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+
+    <table class="table table-hover">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Price</th>
+            <th scope="col">Stock</th>
+            <th scope="col"></th>
+        </tr>
+    </thead>
+    <tbody>
+
+    </table>
+</div>
+
