--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,14 +1,15 @@
 <div class="container">
-    <div class="title">
-        <h3>Products List</h3>
-    </div>
-
+    
     <div class="button-search">
         <button type="button" class="btn btn-success">Add Product</button>
         <form class="d-flex">
             <input class="form-control me-sm-2" type="search" placeholder="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
         </form>
+    </div>
+
+    <div class="title">
+        <h3>Products List</h3>
     </div>
 
     <table class="table table-hover">
@@ -22,6 +23,22 @@
         </tr>
     </thead>
     <tbody>
+
+    @if (productsList) {
+        @for (product of productsList; track product) {
+            <tr class="table-success">
+				<td>{{ product.name }}</td>
+				<td>{{ product.description }}</td>
+				<td>{{ product.price | currency: 'EUR' }}</td>
+				<td>{{ product.stock }}</td>
+				<td>
+				    <button type="button" class="btn btn-info btn-sm ms-2">Edit</button>
+					<button type="button" class="btn btn-primary btn-sm">Delete</button>
+		
+				</td>
+			</tr>
+        }
+    }
 
     </table>
 </div>
