created new component, fixed new routes and updated Product interface to get an id value.

--- a/src/app/products-list/products-list.component.scss
+++ b/src/app/products-list/products-list.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     margin-top: 2rem;
+    text-decoration: underline;
 }
 
 .container {
@@ -15,4 +16,8 @@
  
 .table {
     margin-top: 2rem;
+}
+
+.button-edit {
+    margin-right: 0.5rem;
 }
