--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     
     <div class="button-search">
-        <button type="button" class="btn btn-success">Add Product</button>
+        <button type="button" class="btn btn-success" [routerLink]="['/add']">Add Product</button>
         <form class="d-flex">
             <input class="form-control me-sm-2" type="search" placeholder="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
@@ -32,7 +32,7 @@
 				<td>{{ product.price | currency: 'EUR' }}</td>
 				<td>{{ product.stock }}</td>
 				<td>
-				    <button type="button" class="btn btn-info btn-sm ms-2">Edit</button>
+				    <button type="button" class="btn btn-info btn-sm ms-2 button-edit">Edit</button>
 					<button type="button" class="btn btn-primary btn-sm">Delete</button>
 		
 				</td>
