--- a/src/app/add-edit-product/add-edit-product.component.html
+++ b/src/app/add-edit-product/add-edit-product.component.html
@@ -1,1 +1,26 @@
-<p>add-edit-product works!</p>
+<div class="card-container">
+    <div class="card bg-secondary mb-3" style="max-width: 25rem;">
+      <div class="card-header"><strong>Add Product</strong></div>
+      <div class="card-body">
+
+        <form>
+            <label for="name">Name: </label>
+            <input type="text" class="form-control" id="name">
+            <label for="description">Description: </label>
+            <input type="text" class="form-control" id="description">
+            <label for="price">Price:</label>
+            <input type="number" class="form-control" id="price">
+            <label for="stock">Stock</label>
+            <input type="number" class="form-control" id="stock">
+    
+            <div class="button-container">
+                <button type="button" class="btn btn-secondary" [routerLink]="['/']">Return</button>
+                <button type="button" class="btn btn-success">Submit</button>
+            </div>
+        </form>
+
+
+      </div>
+    </div>
+</div>
+
