--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -32,7 +32,7 @@
 				<td>{{ product.price | currency: 'EUR' }}</td>
 				<td>{{ product.stock }}</td>
 				<td>
-				    <button type="button" class="btn btn-info btn-sm ms-2 button-edit">Edit</button>
+				    <button type="button" class="btn btn-info btn-sm ms-2 button-edit" [routerLink]="['/edit/', product.id]">Edit</button>
 					<button type="button" class="btn btn-primary btn-sm">Delete</button>
 		
 				</td>
