--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    min-height: 100vh;
+    background: linear-gradient(to bottom, #edecec, #ffffff);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
