--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -13,16 +13,23 @@
     </div>
 
     <table class="table table-hover">
-    <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Price</th>
-            <th scope="col">Stock</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
+        <thead>
+            @if(productsList.length > 0) {
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Stock</th>
+                    <th scope="col"></th>
+                </tr>
+            } @else {
+                <div class="title">
+                    <h4>There are no products</h4>
+                </div>
+            }
+        </thead>
+        <tbody>
+        
 
     @if (productsList) {
         @for (product of productsList; track product) {
