--- a/src/app/add-edit-product/add-edit-product.component.html
+++ b/src/app/add-edit-product/add-edit-product.component.html
@@ -1,6 +1,6 @@
 <div class="card-container">
     <div class="card bg-secondary mb-3" style="max-width: 25rem;">
-      <div class="card-header"><strong>Add Product</strong></div>
+      <div class="card-header"><strong>{{ operation }} Product</strong></div>
       <div class="card-body">
 
         <form [formGroup]="form" (ngSubmit)="addProduct()">
