--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -3,8 +3,7 @@
     <div class="button-search">
         <button type="button" class="btn btn-success" [routerLink]="['/add']">Add Product</button>
         <form class="d-flex">
-            <input class="form-control me-sm-2" type="search" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control me-sm-2" type="text" placeholder="Search by Name" (input)="searchTerm = $any($event.target).value">
         </form>
     </div>
 
@@ -32,7 +31,7 @@
         
 
     @if (productsList) {
-        @for (product of productsList; track product) {
+        @for (product of filteredProducts(); track product) {
             <tr class="table-success">
 				<td>{{ product.name }}</td>
 				<td>{{ product.description }}</td>
