--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,5 +1,6 @@
 <div class="calendar-container">    
     <full-calendar
+		#calendar
       	[options]="calendarOptions"
     ></full-calendar>
 </div>
@@ -18,6 +19,16 @@
             			<label class="form-label">Title</label>
             			<input [(ngModel)]="eventData.title" name="title" class="form-control">
           			</div>
+					<div class="mb-3">
+  						<label for="deliveryDescription" class="form-label">Description</label>
+  						<textarea
+    						id="deliveryDescription"
+    						class="form-control"
+    						[(ngModel)]="eventData.description"
+    						rows="3"
+							name="description"
+  						></textarea>
+					</div>
           			<div class="mb-3">
             			<label class="form-label">Date</label>
             			<input [(ngModel)]="eventData.start" name="start" type="date" class="form-control">
