added a tip of usage on top of Calendar component

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,7 @@
+<div class="howto-container">
+	<h6>* Click on a date to add or visualize an Event.</h6>
+</div>
+
 <div class="calendar-container">    
     <full-calendar
 		#calendar
