--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,7 @@
+<div class="howto-container">
+	<h6>* Click on the map to add or visualize an Event.</h6>
+</div>
+
 <div id="map" style="height: 600px; width: 1200px;"></div>
 
 <div
