--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -3,3 +3,11 @@
     margin-right: auto;
     margin-left: auto;
 }
+
+.howto-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 0.3rem;
+	text-decoration: underline;
+}
