cosmetic changes implemented to components.

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,6 +1,13 @@
-<div class="howto-container">
-	<h6>* Click on a date to add or visualize an Event.</h6>
+<div class="header">
+	<div class="howto-wrapper">
+		<div class="howto-container">
+			<span class="badge bg-light">i  </span>
+			<h6>Click on a date to add or visualize an Event.</h6>
+		</div>
+	</div>
 </div>
+
+
 
 <div class="calendar-container">    
     <full-calendar
