--- a/src/app/charts/charts.component.scss
+++ b/src/app/charts/charts.component.scss
@@ -4,7 +4,8 @@
 
 .title {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     text-decoration: underline;
+    margin: 1rem 3rem;
 }
