--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,8 +1,15 @@
-<div class="howto-container">
-	<h6>* Click on the map to add or visualize current delivery locations.</h6>
+<div class="header">
+  <div class="howto-wrapper">
+    <div class="howto-container">
+      <span class="badge bg-light">i</span>
+      <h6>Click on the map to add or visualize current delivery locations.</h6>
+    </div>
+  </div>
 </div>
 
-<div id="map" style="height: 600px; width: 1200px;"></div>
+
+
+<div id="map" style="height: 500px; width: 1100px;"></div>
 
 <div
   class="modal fade show"
