--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,29 +1,39 @@
 <nav class="navbar navbar-expand-lg bg-warning custom-navbar" data-bs-theme="dark">
   <div class="container-fluid">
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link" href="#">Home
-            <span class="visually-hidden">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/map']" routerLinkActive="active" class="nav-link" href="#">Map</a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/calendar']" routerLinkActive="active" class="nav-link" href="#">Calendar</a>
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/charts']" routerLinkActive="active" class="nav-link" href="#">Charts</a>
-        </li>
-      </ul>
-      <!-- <form class="d-flex">
-        <input class="form-control me-sm-2" type="search" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
-    </div>
+
+     <div class="d-none d-lg-block" style="width: 100px;"></div>
+
+
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <div class="d-flex justify-content-center flex-grow-1">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link" href="#">Home
+                <span class="visually-hidden">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a [routerLink]="['/map']" routerLinkActive="active" class="nav-link" href="#">Map</a>
+            </li>
+            <li class="nav-item">
+              <a [routerLink]="['/calendar']" routerLinkActive="active" class="nav-link" href="#">Calendar</a>
+            </li>
+            <li class="nav-item">
+              <a [routerLink]="['/charts']" routerLinkActive="active" class="nav-link" href="#">Charts</a>
+            </li>
+          </ul>
+        </div>
+        
+        
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link">Login</a>
+          </li>
+        </ul>
+      </div>
   </div>
 </nav>
