--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,8 +1,8 @@
-.navbar-collapse {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+// .navbar-collapse {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
 
 .custom-navbar {
     border: none !important;
