added register html and logic finished.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,5 +50,8 @@
         <span>Login</span>
       }
     </button>
+    <div class="register-link">
+      Don't have an account? <a [routerLink]="['/register']">Register here</a>
+    </div>
   </form>
 </div>
