--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,7 +33,10 @@
           <li class="nav-item">
             <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link">Login</a>
           </li>
+          <li>
+            <a [routerLink]="['/register']" routerLinkActive="active" class="nav-link">Register</a>
+          </li>
         </ul>
       </div>
-  </div>
-</nav>
+    </div>
+  </nav>
